Fixed page spacing at bottom of small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ body {
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding-bottom: 82px; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .cdk-overlay-pane.my-dialog {
   position: relative!important;
